package com.project.www.myproject2;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class Myproject2Application {

    public static void main(String[] args) {
        SpringApplication.run(Myproject2Application.class, args);
    }

}
