@startuml
class ContactService {
- ContactRepository contactRepository
+ List<Contact> getAllContacts()
+ Optional<Contact> getContactById(Long)
+ Contact addContact(Contact)
+ Contact updateContact(Contact)
+ void deleteContact(Long)
}


class Myproject2Application {
+ {static} void main(String[])
}

class Contact {
- Long id
- String name
- String address
- String phone
+ Long getId()
+ void setId(Long)
+ String getName()
+ void setName(String)
+ String getAddress()
+ void setAddress(String)
+ String getPhone()
+ void setPhone(String)
}


class ContactController {
- ContactService contactService
+ String listContacts(Model)
+ String showAddForm(Model)
+ String addContact(Contact)
+ String showEditForm(Long,Model)
+ String updateContact(Long,Contact)
+ String deleteContact(Long)
}


interface ContactRepository {
}

Contact <... ContactController

ContactController *--> ContactService
ContactRepository <--* ContactService
@enduml